tests/ui/const-generics/mgca/type_const-inherent-const-omitted-type.stderr
error: missing type for `const` item
  --> $DIR/type_const-inherent-const-omitted-type.rs:7:17
   |
LL |     type const B = 4;
   |                 ^
   |
help: provide a type for the item
   |
LL |     type const B: <type> = 4;
   |                 ++++++++

error: type annotations needed for the literal
  --> $DIR/type_const-inherent-const-omitted-type.rs:7:20
   |
LL |     type const B = 4;
   |                    ^

error: aborting due to 2 previous errors

